<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:checked="true"
            android:icon="@drawable/news"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:title="@string/weather" />

        <item
            android:id="@+id/nav_picture"
            android:icon="@drawable/pictures"
            android:title="@string/pictures" />

        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/me"
            android:title="@string/aboutme" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
</menu>